# try_adcp

./: MANIFEST.in  MANIFEST.innn  channeldata.json  linux-64.html  noarch.html  osx-64.html  pyproject.toml  rss.xml  setup.py
ADCP_bundle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adcp/: pyproject.toml  setup.py
adcp/src/ADCP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adfr/: pyproject.toml  setup.py
adfr/bin_scripts/: adfr
adfr/src/ADFR/: AARotamers.py  ReceptorFT.py  ga_util.py  scaling.py
adfr/src/ADFR.egg-info/: PKG-INFO  SOURCES.txt
adfr/src/ADFR/GUI/: ADGridGUI.py  ResiduesTree.py  gridGUI.py  pairwiseScore.py
adfr/src/ADFR/tests/: testAGFR.py
adfr/src/ADFR/utils/: MakeGpf.py  MakeGrids.py  addGradients.py  runADFR.py  runAGFR.py
adfrcc/: pyproject.toml  setup.py
adfrcc/src/ADFRcc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
appframework/: pyproject.toml  setup.py
appframework/src/AppFramework.egg-info/: PKG-INFO  SOURCES.txt
autosite/: MANIFEST.in  pyproject.toml  setup.py
bhtree/: pyproject.toml  setup.py
bin_scripts/: adcp  adcp_Linux-x86_64_1.1
ccsblib/: pyproject.toml  setup.py
ccsblib/bin_scripts/: agfrgui  autogrid4
ccsblib/lib_files/: libnlopt.so.0
ccsblib/src/CCSBLIB.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dejavu2/: pyproject.toml  setup.py
dejavu2/src/DejaVu2/: Box.py  (+24 more)
geomutils/: pyproject.toml  setup.py
geomutils/src/geomutils/: surface.py
geomutils/src/geomutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
geomutils/src/geomutils/Tests/Data/: crn_coords.py
gle/: pyproject.toml  setup.py
linux-64/: repodata.json  repodata_from_packages.json  repodata_from_packages.json.bz2
mglkey/: LICENSE  pyproject.toml  setup.py
mglutil/: pyproject.toml  setup.py
molkit2/: pyproject.toml  setup.py
mslib/: pyproject.toml  setup.py
mslibcom/: pyproject.toml  setup.py
opengltk/: pyproject.toml  setup.py
pmvapp/: pyproject.toml  setup.py
prody/: pyproject.toml  setup.py
pyglf/: pyproject.toml  setup.py
src/ADCP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ADFR/: BFGSsearch.py  GA.py  LigandFT.py  __init__.py  cofactors.py  dro.py  selection.py
src/AppFramework/: App.py
src/AutoSite/: compositePoints.py
src/DejaVu2/: Clip.py  ColorChooser.py  ColorWheel.py  DataOutput.py  Displayable.py  GleObjects.py  IndexedGeom.py  IndexedPolylines.py  Light.py  MaterialEditor.py  Polylines.py  StickerImage.py  Viewer.py  VolumeGeom.py  __init__.py  blenderScene.py  capGeom.py  colorTool.py  csgClip.py  hpBalls.py
src/MolKit2/: AARotamer.py  cif.py  cifInterface.py  mglmmtf.py  molecule.py  openBabelInterface.py
src/PmvApp/: NucleicBases.py  Pmv.py  bondsCmds.py  cartoonCmds.py  coarseMolecularSurfaceCmds.py  colorCmdsProxy.py  colorPalette.py  extruder.py  extrusionCmds.py  fileCmds.py  grid3DCmds.py  labelCmds.py  selectionCmds.py
src/mglutil/: errors.py  events.py  popen2Threads.py  process.py
support/: pyproject.toml  setup.py
utpackages/: README.md  pyproject.toml  setup.py
volume/: pyproject.toml  setup.py
volume/src/Volume/: Grid3D.py
volume/src/Volume.egg-info/: PKG-INFO  SOURCES.txt
volume/src/Volume/IO/: ReadVox.py
volume/src/Volume/Tests/: __init__.py  basicPvv.py  test_basicVLI.py
volume/src/Volume/VisionInterface/Tests/: test_ReadWriteCCP4.py
volume/src/Volume/VisionInterface/Tests/Data/: nwv1.mrc  nwv2.map
(+336 files in other folders)
