[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CCSBLIB"
version = "0.0.1"
authors = [
  { name="Sudhanshu Shanker", email="sudhanshu.bioinfo@gmail.com" },
]
description = "ADCP trial repository"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SudhanshuShanker/try_adcp"
